--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -104,7 +104,7 @@ jobs:
             - run:
                 command: |
                     pushd node
-                    ./scripts/benchmarks 2 1
+                    ../scripts/benchmarks 2 1
     node-test:
         machine:
             image: ubuntu-2204:2022.10.2
