--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -25,17 +25,20 @@ rand_core       ={ version="0.6.4", optional=true }
 serde_json      ={ version="1.0", optional=true }
 x25519-dalek    ={ version="2.0.1", features=["static_secrets"], optional=true }
 entropy-protocol={ version="0.1.0", path="../protocol", optional=true, default-features=false }
-reqwest         ={ version="0.12.4", features=["json", "stream"], optional=true }
+reqwest         ={ version="0.12.5", features=["json", "stream"], optional=true }
 base64          ={ version="0.22.0", optional=true }
 synedrion       ={ git="https://github.com/entropyxyz/synedrion", rev="25373111cbb01e1a25d8a5c5bb8f4652c725b3f1", optional=true }
 hex             ={ version="0.4.3", optional=true }
+anyhow          ="1.0.86"
 
 # Only for the browser
 js-sys={ version="0.3.68", optional=true }
 tokio ="1.36"
 
 [dev-dependencies]
-serial_test="3.1.1"
+serial_test          ="3.1.1"
+sp-keyring           ="34.0.0"
+entropy-testing-utils={ path="../testing-utils" }
 
 [features]
 default=["native", "full-client-native"]
