--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -38,12 +38,10 @@ parity-scale-codec="3.6.12"
 sp-core           ={ version="31.0.0", default-features=false }
 
 # Entropy
-entropy-shared={ version="0.2.0", path="../shared" }
-entropy-kvdb={ version="0.2.0", path="../kvdb", default-features=false }
+entropy-shared  ={ version="0.2.0", path="../shared" }
+entropy-kvdb    ={ version="0.2.0", path="../kvdb", default-features=false }
 entropy-protocol={ version="0.2.0", path="../protocol", features=["server"] }
-entropy-client={ version="0.2.0", path="../client", default-features=false, features=[
-  "native",
-] }
+entropy-client  ={ version="0.2.0", path="../client", default-features=false, features=["native"] }
 
 # Programs
 entropy-programs-runtime="0.10.0"
